# llvm-project

bazel_tidy_example/: .bazelrc  .clang-tidy  BUILD.bazel  WORKSPACE  bazel-bazel_tidy_example  bazel-bin  bazel-out  bazel-testlogs  class_test.cpp  compile_commands.json  find_all.cpp  function_signature.json  has_descendent.cpp  helper.cpp  helper.hpp  main.cpp  main2.cpp  raw_tree.cpp  return_pointer_1.cpp  return_pointer_2.cpp  return_pointer_full.cpp  return_pointer_multiple.cpp  return_test.cpp  return_type_test.cpp  template_test.cpp  test.result  umf_example_simplified.cpp
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidy.cpp  ClangTidyCheck.cpp  ClangTidyDiagnosticConsumer.cpp
clang-tools-extra/clang-tidy/misc/: CMakeLists.txt  FilterCheckCheck.cpp  FilterCheckCheck.h  FunctionSignatureCheck.cpp  FunctionSignatureCheck.h  LhsCheckCheck.cpp  LhsCheckCheck.h  MiscTidyModule.cpp  MyClassCheckCheck.cpp  MyClassCheckCheck.h  MyFirstCheckCheck.cpp  MyFirstCheckCheck.h  MyReturnCheckCheck.cpp  MyReturnCheckCheck.h  RawTreeCheck.cpp  RawTreeCheck.h  ReturnPointerCheck.cpp  ReturnPointerCheck.h  VirtualShadowingCheck.cpp  VirtualShadowingCheck.h  XcheckCompoundMatchCheck.cpp  XcheckCompoundMatchCheck.h  XcheckReturnPointerCheck.cpp  XcheckReturnPointerCheck.h
clang-tools-extra/clang-tidy/readability/: FunctionSizeCheck.cpp  RedundantAccessSpecifiersCheck.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst
clang/lib/Basic/: Diagnostic.cpp
(+23 files in other folders)
